and queue for sending cqampaigns email
